--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
